[project]
name = "delay_sys"
version = "0.1.0"
description = "A Python library for discretizing continuous-time transfer functions with time delays"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "control>=0.9.0",
    "numpy>=1.19.0",
    "matplotlib>=3.0.0"
]

[project.scripts]
delay_sys = "delay_sys:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
